<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/denah"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/denhkuusdf"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/satu"
        android:layout_width="35dp"
        android:layout_height="70dp"
        android:layout_marginTop="305dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/square"
        android:rotation="-50"
        android:text="@string/satu"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintRight_toRightOf="@id/dua"
        app:layout_constraintTop_toTopOf="@+id/denah" />

    <TextView
        android:id="@+id/dua"
        android:layout_width="35dp"
        android:layout_height="70dp"
        android:layout_marginTop="276dp"
        android:layout_marginRight="22dp"
        android:background="@drawable/square"
        android:rotation="-50"
        android:text="@string/dua"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintRight_toRightOf="@id/tiga"
        app:layout_constraintTop_toTopOf="@+id/denah" />

    <TextView
        android:id="@+id/tiga"
        android:layout_width="35dp"
        android:layout_height="70dp"
        android:layout_marginTop="248dp"
        android:layout_marginRight="22dp"
        android:background="@drawable/square"
        android:rotation="-50"
        android:text="@string/tiga"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintRight_toRightOf="@id/empat"
        app:layout_constraintTop_toTopOf="@+id/denah" />

    <TextView
        android:id="@+id/empat"
        android:layout_width="35dp"
        android:layout_height="70dp"
        android:layout_marginTop="220dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/square"
        android:rotation="-50"
        android:text="@string/empat"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintRight_toRightOf="@id/lima"
        app:layout_constraintTop_toTopOf="@+id/denah" />

    <TextView
        android:id="@+id/lima"
        android:layout_width="35dp"
        android:layout_height="70dp"
        android:layout_marginTop="195dp"
        android:layout_marginRight="21dp"
        android:background="@drawable/square"
        android:rotation="-50"
        android:text="@string/_5"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintRight_toRightOf="@id/enam"
        app:layout_constraintTop_toTopOf="@+id/denah" />

    <TextView
        android:id="@+id/enam"
        android:layout_width="35dp"
        android:layout_height="70dp"
        android:layout_marginRight="33dp"
        android:layout_marginTop="168dp"
        android:background="@drawable/square"
        android:rotation="-50"
        android:text="@string/_6"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintRight_toRightOf="@id/tujuh"
        app:layout_constraintTop_toTopOf="@+id/denah" />

    <TextView
        android:id="@+id/tujuh"
        android:layout_width="35dp"
        android:layout_height="70dp"
        android:layout_marginRight="33dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/square"
        android:text="@string/_7"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintRight_toRightOf="@id/delapan"
        app:layout_constraintTop_toTopOf="@+id/denah" />

    <TextView
        android:id="@+id/delapan"
        android:layout_width="35dp"
        android:layout_height="70dp"
        android:layout_marginRight="33dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/square"
        android:text="@string/_8"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintRight_toRightOf="@id/sembilan"
        app:layout_constraintTop_toTopOf="@+id/denah" />

    <TextView
        android:id="@+id/sembilan"
        android:layout_width="35dp"
        android:layout_height="70dp"
        android:layout_marginRight="33dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/square"
        android:text="@string/_9"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintRight_toRightOf="@id/sepuluh"
        app:layout_constraintTop_toTopOf="@+id/denah" />

    <TextView
        android:id="@+id/sepuluh"
        android:layout_width="35dp"
        android:layout_height="70dp"
        android:layout_marginRight="33dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/square"
        android:text="@string/_10"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="@id/sebelas"
        app:layout_constraintTop_toTopOf="@+id/denah" />

    <TextView
        android:id="@+id/sebelas"
        android:layout_width="35dp"
        android:layout_height="70dp"
        android:layout_marginRight="33dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/square"
        android:text="@string/_11"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="@id/duabelas"
        app:layout_constraintTop_toTopOf="@+id/denah" />

    <TextView
        android:id="@+id/duabelas"
        android:layout_width="35dp"
        android:layout_height="70dp"
        android:layout_marginTop="160dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/square"
        android:text="@string/_12"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="@id/tigabelas"
        app:layout_constraintTop_toTopOf="@+id/denah" />

    <TextView
        android:id="@+id/tigabelas"
        android:layout_width="40dp"
        android:layout_height="95dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/square"
        android:text="@string/_13"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/denah" />

    <TextView
        android:id="@+id/empatbelas"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/trapezoid"
        android:rotationX="180"
        android:text="@string/_14"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tigabelas" />

    <TextView
        android:id="@+id/limabelas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:text="@string/_15"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/empatbelas"/>

    <TextView
        android:id="@+id/enambelas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:text="@string/_16"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/limabelas"/>

    <TextView
        android:id="@+id/tujuhbelas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:text="@string/_17"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enambelas"/>

    <TextView
        android:id="@+id/delapanbelas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:text="@string/_18"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tujuhbelas"/>

    <TextView
        android:id="@+id/sembilanbelas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:text="@string/_19"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delapanbelas"/>

    <TextView
        android:id="@+id/duapuluh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="47dp"
        android:text="@string/_20"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="@id/sembilanbelas"
        app:layout_constraintTop_toBottomOf="@id/delapanbelas"/>

    <TextView
        android:id="@+id/duapuluhsatu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:text="@string/_21"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="@id/duapuluh"
        app:layout_constraintTop_toBottomOf="@id/delapanbelas"/>

    <TextView
        android:id="@+id/duapuluhdua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginTop="5dp"
        android:text="@string/_22"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="@id/duapuluhsatu"
        app:layout_constraintTop_toBottomOf="@id/delapanbelas"/>

    <TextView
        android:id="@+id/duapuluhtiga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/_23"
        android:rotation="-30"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="@id/duapuluhdua"
        app:layout_constraintTop_toBottomOf="@id/delapanbelas"/>

    <TextView
        android:id="@+id/duapuluhempat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="35dp"
        android:layout_marginTop="25dp"
        android:text="@string/_24"
        android:rotation="-30"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="@id/duapuluhtiga"
        app:layout_constraintTop_toBottomOf="@id/delapanbelas"/>

    <TextView
        android:id="@+id/duapuluhlima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="125dp"
        android:layout_marginBottom="25dp"
        android:text="@string/_25"
        android:rotation="-50"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/duapuluhempat"/>

    <TextView
        android:id="@+id/duapuluhenam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="45dp"
        android:text="@string/_26"
        android:rotation="-50"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/duapuluhlima"
        app:layout_constraintBottom_toTopOf="@id/duapuluhempat"/>

    <TextView
        android:id="@+id/duapuluhtujuh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/_27"
        android:rotation="-50"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/duapuluhenam"
        app:layout_constraintBottom_toTopOf="@id/duapuluhempat"/>

    <TextView
        android:id="@+id/duapuluhdelapan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/_28"
        android:rotation="-50"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/duapuluhtujuh"
        app:layout_constraintTop_toBottomOf="@id/empat"/>
    <TextView
        android:id="@+id/tigapuluh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/_32"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintRight_toLeftOf="@id/tigapuluhsatu"
        app:layout_constraintTop_toBottomOf="@id/delapan"/>
    <TextView
        android:id="@+id/tigapuluhsatu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="35dp"
        android:text="@string/_31"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintRight_toLeftOf="@id/empatbelas"
        app:layout_constraintTop_toBottomOf="@id/delapan"/>
</androidx.constraintlayout.widget.ConstraintLayout>